[project]
name = "hanzi-cloud"
version = "0.1.0"
description = "A desktop app for batch Chinese document word frequency analysis and word cloud generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jieba",
    "matplotlib",
    "openpyxl",
    "pyside6",
    "python-docx",
    "wordcloud",
]

[tool.uv]
# 这是一个应用，不需要作为 Python 包安装
package = false
# 使用清华镜像加速下载
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
